# imagecrypt1

./: CMakeLists.txt  README.md
include/: Button.h  FFT.h  SliderSFML.h  tinyfiledialogs.h
include/sndfile/: Slider.h
src/: SliderSFML.cpp  main.cpp  tinyfiledialogs.cpp
